--- a/dzhuzhba/contacts.html
+++ b/dzhuzhba/contacts.html
@@ -21,6 +21,24 @@
 	<header class="_header _headerpages _headcataloge">
 		<div class="container">
 			<div class="row">
+				<div class="_header_hide">
+					<button class="_header_hide_button">
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
+					<div class="_header_hide_menu">
+						<div class="_header_hide_menu_close">X</div>
+						<ul>
+							<li><a href="/dzhuzhba/index.html">Главная</a></li>
+							<li><a href="/dzhuzhba/company.html">О компании</a></li>
+							<li><a href="/dzhuzhba/news.html">Новости</a></li>
+							<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+							<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+							<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
+						</ul>
+					</div>
+				</div>
 				<div class="col-md-3">
 					<div class="_header_logo">
 						<a href="#"><img src="img/logo/logo2.png" alt=""></a>
@@ -37,12 +55,12 @@
 						<div class="_header_main_menu _contactsmenu">
 							<nav>
 								<ul>
-									<li><a href="/dzhuzhba/index.html">Главная</a></li>
-									<li><a href="/dzhuzhba/company.html">О компании</a></li>
-									<li><a href="/dzhuzhba/news.html">Новости</a></li>
-									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
-									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
-									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
+									<li><a href="index.html">Главная</a></li>
+									<li><a href="company.html">О компании</a></li>
+									<li><a href="news.html">Новости</a></li>
+									<li><a href="catalog.html">Каталог</a></li>
+									<li><a href="price/allprice.txt" download>Прайс-лист</a></li>
+									<li><a href="contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -56,7 +74,7 @@
 		<div class="container">
 			<h2>Контакты</h2>
 			<div class="row _contacts_block">
-				<div class="col-md-6">
+				<div class="col-sm-6 col-xs-12">
 					<div class="_contacts_block_info">
 						<span>п. Джубга,<br>
 						ул. Советская, д.4</span>
@@ -101,6 +119,19 @@ Viber: +7 918 680-09-03</span>
 					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
+				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
+			</div>
+		</div>
+		<div class="_footer_right _page_footer_hide">
+			<h4>Где нас найти?</h4>
+			<span>п. Джубга,<br>              
+				ул. Советская, 5</span>
+			<div class="_footer_right_contacts">
+			<span>Тел.: +7 (918) 56-09-02</span>
+			<span>E-mail: <a href="#">dgubga-hleb@dh.ru</a></span>
+			</div>
+			<div>
+				<span class="_copy_hide">© 2018. Джубга-хлеб.</span>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
 			</div>
 		</div>
@@ -157,7 +188,24 @@ centerMode: true,
     });
 });
 </script>-->
-
+<script>
+		$(function() {
+			$('._header_hide_button').on('click', function(event) {
+				event.preventDefault();
+				$('._header_hide_menu').fadeIn("slow");
+			});
+			$('._header_hide_menu_close').on('click', function(event) {
+				event.preventDefault();
+				$('._header_hide_menu').fadeOut("slow");
+			});
+		});
+		$(document).mouseup(function (e) {
+			var container = $("._header_hide_menu");
+		if (container.has(e.target).length === 0){
+			container.fadeOut();
+			}
+		});
+</script>
 
 </body>
 </html>
