--- a/dzhuzhba/catalog.html
+++ b/dzhuzhba/catalog.html
@@ -76,7 +76,7 @@
 			<h2>Каталог</h2>
 			<div class="row _news_allbest ">
 				<div class="col-sm-4 col-xs-12 _news_allbest_padd"><div class="_news_allbest_block">
-					<a href="catalogbread.html"><img src="img/categories/bread.png" alt=""><span >Хлеб</span></a>
+					<a href="/dzhuzhba/catalogbread.html"><img src="img/categories/bread.png" alt=""><span >Хлеб</span></a>
 				</div>
 				<p>Хлеб является основным из продуктов, которые каждодневно употребляет каждый из нас. Люди с древних времён почитали хлеб 
 и старались употреблять его как можно чаще.<br><br>
@@ -85,7 +85,7 @@
 </p>		
 				</div>
 				<div class="col-sm-4 col-xs-12 _news_allbest_padd"><div class="_news_allbest_block">
-					<a href="catalogcake.html"><img src="img/categories/cakes.png" alt=""><span >Торты, пирожные</span></a>
+					<a href="/dzhuzhba/catalogcake.html"><img src="img/categories/cakes.png" alt=""><span >Торты, пирожные</span></a>
 				</div>
 				<p>Заказывая торт Вы хотите получить не только красивый торт, но и вкусный, и так что бы его хватило на всех Ваших гостей! <br><br>
 
@@ -95,7 +95,7 @@
 с начинками!</p>
 				</div>
 				<div class="col-sm-4 col-xs-12 _news_allbest_padd"><div class="_news_allbest_block">
-					<a href="catalogbun.html"><img src="img/categories/cooperation.png" alt=""><span >Булочки</span></a>
+					<a href="/dzhuzhba/catalogbun.html"><img src="img/categories/cooperation.png" alt=""><span >Булочки</span></a>
 				</div>
 				<p>Одним из видов сдобных хлебобулочных изделий есть булочки с изюмом. Изобрёл их Иван Филиппов – представитель известнейшей русской династии хлебопёков, владелец нескольких булочных. Имея хорошую коммерческую жилку, он в своё время стал зачинателем многих нововведений в пекарском деле.<br><br>
 
@@ -125,7 +125,7 @@
 					
 				</ul>
 				<ul>
-					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="/dzhuzhba/spec.html">Спецпредложения</a></li>
 					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
