--- a/dzhuzhba/catalogbun.html
+++ b/dzhuzhba/catalogbun.html
@@ -55,12 +55,12 @@
 						<div class="_header_main_menu _catalogmenu">
 							<nav>
 								<ul>
-									<li><a href="index.html">Главная</a></li>
-									<li><a href="company.html">О компании</a></li>
-									<li><a href="news.html">Новости</a></li>
-									<li><a href="catalog.html">Каталог</a></li>
-									<li><a href="price/allprice.txt" download>Прайс-лист</a></li>
-									<li><a href="contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -91,24 +91,24 @@
 				<div class="col-md-3 _catalog_menu_list">
 					<div class="_catalogbun_list_breads">
 						<ul>
-							<a href="catalogbread.html"><li>Хлеба</li></a>
-							<a href="catalogbreadpage.html"><li>Хлеб «Бородинский»</li></a>
+							<a href="/dzhuzhba/catalogbread.html"><li>Хлеба</li></a>
+							<a href="/dzhuzhba/catalogbreadpage.html"><li>Хлеб «Бородинский»</li></a>
 							<a href="#"><li>Хлеб «Столичный»</li></a>
 							<a href="#"><li>Хлеб «Особый»</li></a>
 						</ul>
 					</div>
 					<div class="_catalogbun_list_cakes">
 						<ul>
-							<a href="catalogcake.html"><li>Торты, пирожные</li></a>
-							<a href="catalogcakepage.html"><li>Торт «Панчо»</li></a>
+							<a href="/dzhuzhba/catalogcake.html"><li>Торты, пирожные</li></a>
+							<a href="/dzhuzhba/catalogcakepage.html"><li>Торт «Панчо»</li></a>
 							<a href="#"><li>Торт «Картошка»</li></a>
 							<a href="#"><li>Торт «Горка»</li></a>
 						</ul>
 					</div>
 					<div class="_catalogbun_list_bun">
 						<ul class="catalogs-list">
-							<a href="catalogbun.html"><li class="_catalog_menu_active">Булочки</li></a>
-							<a href="catalogbunpage.html"><li>Булочка «Творожная»</li></a>
+							<a href="/dzhuzhba/catalogbun.html"><li class="_catalog_menu_active">Булочки</li></a>
+							<a href="/dzhuzhba/catalogbunpage.html"><li>Булочка «Творожная»</li></a>
 							<a href="#"><li>Булочка «Особая»</li></a>
 							<a href="#"><li>Кекс с изюмом</li></a>
 							<a href="#"><li>Кекс с изюмом</li></a>
@@ -124,7 +124,7 @@
 						<li class="_catalogbun_goods">
 							<div class="_catalogbun_goods_item _catalogbun_goods_bigleft">
 								<img src="img/bun/list/1.png" alt="">
-								<a href="catalogbunpage.html">Булочка «Творожная»</a>
+								<a href="/dzhuzhba/catalogbunpage.html">Булочка «Творожная»</a>
 							</div>
 							<div class="_catalogbun_goods_item">
 								<img src="img/bun/list/2.png" alt="">
