--- a/dzhuzhba/index.html
+++ b/dzhuzhba/index.html
@@ -47,7 +47,7 @@
 						<div class="_header_mobile_sub">
 							<div class="_header_main_sub"><a href="#">Подписывайтесь!</a></div>
 							<div class="_header_main_special">
-								<a href="#"><span>Спецпредложение</span>
+								<a href="/dzhuzhba/spec.html"><span>Спецпредложение</span>
 									<p>для здравниц, санаториев 
 									и детских лагерей</p></a>
 							</div>
@@ -63,17 +63,17 @@
 						<div class="_header_main_menu">
 							<nav>
 								<ul>
-									<li><a href="index.html">Главная</a></li>
-									<li><a href="company.html">О компании</a></li>
-									<li><a href="news.html">Новости</a></li>
-									<li><a href="catalog.html">Каталог</a></li>
-									<li><a href="price/allprice.txt" download>Прайс-лист</a></li>
-									<li><a href="contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
 						<div class="_header_main_special">
-							<a href="#"><span>Спецпредложение</span>
+							<a href="/dzhuzhba/spec.html"><span>Спецпредложение</span>
 								<p>для здравниц, санаториев 
 								и детских лагерей</p></a>
 						</div>
@@ -103,23 +103,23 @@
 			<div class="row">
 				<div class="col-md-4 col-xs-12">
 					<div class="_ourbakery_block">
-						<a href="#"><img src="img/categories/bread.png" alt=""></a>
-						<p href="#">Хлебные<br>
-						<span>новинки</span></p>
+						<a href="/dzhuzhba/catalogbread.html"><img src="img/categories/bread.png" alt=""></a>
+						<p>Хлеб<br>
+						</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-12">
 					<div class="_ourbakery_block">
-						<a href="#"><img src="img/categories/cakes.png" alt=""></a>
-						<p href="#">Торты, пирожные<br>
-						<span>новинки</span></p>
+						<a href="/dzhuzhba/catalogcake.html"><img src="img/categories/cakes.png" alt=""></a>
+						<p>Торты, пирожные<br>
+						</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-12">
 					<div class="_ourbakery_block">
-						<a href="#"><img src="img/categories/cooperation.png" alt=""></a>
-						<p href="#">Сотрудничество<br>
-						<span>с нами</span></p>
+						<a href="/dzhuzhba/catalogbun.html"><img src="img/categories/cooperation.png" alt=""></a>
+						<p>Булочки<br>
+						</p>
 					</div>
 				</div>
 				<div class="col-xs-12 _ourbakery_descr _ourbakery_hide_desc2">
@@ -179,17 +179,17 @@
 				</ul>
 				<div class="tabs__price active_price">
 					<div class="_listgoods_price">
-						<a href="price/breadprice.txt" download>Скачать прайс-лист «Хлеб»</a >
+						<a href="/dzhuzhba/price/breadprice.txt" download>Скачать прайс-лист «Хлеб»</a >
 					</div>
 				</div>
 				<div class="tabs__price">
 					<div class="_listgoods_price">
-						<a href="price/bunprice.txt" download>Скачать прайс-лист «Булочки»</a >
+						<a href="/dzhuzhba/price/bunprice.txt" download>Скачать прайс-лист «Булочки»</a >
 					</div>
 				</div>
 				<div class="tabs__price">
 					<div class="_listgoods_price">
-						<a href="price/cakeprice.txt" download>Скачать прайс-лист «Торты»</a >
+						<a href="/dzhuzhba/price/cakeprice.txt" download>Скачать прайс-лист «Торты»</a >
 					</div>
 				</div>
 			</div>
@@ -251,7 +251,7 @@
 			</div>
 			<div class="tabs__price active_price prices_hide">
 					<div class="_listgoods_price">
-						<a href="price/breadprice.txt" download>Скачать прайс-лист «Хлеб»</a >
+						<a href="/dzhuzhba/price/breadprice.txt" download>Скачать прайс-лист «Хлеб»</a >
 					</div>
 				</div>
 			<div class="tabs__content">
@@ -309,7 +309,7 @@
 			</div>
 			<div class="tabs__price active_price prices_hide">
 					<div class="_listgoods_price">
-						<a href="price/bunprice.txt" download>Скачать прайс-лист «Булочки»</a >
+						<a href="/dzhuzhba/price/bunprice.txt" download>Скачать прайс-лист «Булочки»</a >
 					</div>
 				</div>
 			<div class="tabs__content">
@@ -367,7 +367,7 @@
 			</div>
 			<div class="tabs__price active_price prices_hide">
 					<div class="_listgoods_price">
-						<a href="price/cakeprice.txt" download>Скачать прайс-лист «Торты»</a >
+						<a href="/dzhuzhba/price/cakeprice.txt" download>Скачать прайс-лист «Торты»</a >
 					</div>
 			</div>
 			
@@ -395,7 +395,7 @@
 					
 				</ul>
 				<ul>
-					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="/dzhuzhba/spec.html">Спецпредложения</a></li>
 					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
