--- a/dzhuzhba/catalogbreadpage.html
+++ b/dzhuzhba/catalogbreadpage.html
@@ -55,12 +55,12 @@
 						<div class="_header_main_menu _catalogmenu">
 							<nav>
 								<ul>
-									<li><a href="index.html">Главная</a></li>
-									<li><a href="company.html">О компании</a></li>
-									<li><a href="news.html">Новости</a></li>
-									<li><a href="catalog.html">Каталог</a></li>
-									<li><a href="price/allprice.txt" download>Прайс-лист</a></li>
-									<li><a href="contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -79,8 +79,8 @@
 	<section class="_breadcrumbs">
 		<div class="container">
 			<ul class="ul _breadcrumbs-catalog">
-				<li><a href="catalog.html">Каталог</a></li>
-				<li><a href="catalogbread.html">Хлеб</a></li>
+				<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+				<li><a href="/dzhuzhba/catalogbread.html">Хлеб</a></li>
 				<li><a href="#">Хлеб «Бородинский»</a></li>
 			</ul>
 			<img src="img/breads/header.png" alt="">
@@ -92,8 +92,8 @@
 				<div class="col-md-3 _catalog_menu_list">
 					<div class="_catalogbread_list_breads">
 						<ul class="catalogs-list">
-							<a href="catalogbread.html"><li class="_catalog_menu_active">Хлеба</li></a>
-							<a href="catalogbreadpage.html"><li class="_catalog_page_active">Хлеб «Бородинский»</li></a>
+							<a href="/dzhuzhba/catalogbread.html"><li class="_catalog_menu_active">Хлеба</li></a>
+							<a href="/dzhuzhba/catalogbreadpage.html"><li class="_catalog_page_active">Хлеб «Бородинский»</li></a>
 							<a href="#"><li>Хлеб «Столичный»</li></a>
 							<a href="#"><li>Хлеб «Особый»</li></a>
 							<a href="#"><li>Хлеб «Особый»</li></a>
@@ -104,16 +104,16 @@
 					</div>
 					<div class="_catalogbread_list_cakes">
 						<ul>
-							<a href="catalogcake.html"><li>Торты, пирожные</li></a>
-							<a href="catalogcakepage.html"><li>Торт «Панчо»</li></a>
+							<a href="/dzhuzhba/catalogcake.html"><li>Торты, пирожные</li></a>
+							<a href="/dzhuzhba/catalogcakepage.html"><li>Торт «Панчо»</li></a>
 							<a href="#"><li>Торт «Картошка»</li></a>
 							<a href="#"><li>Торт «Горка»</li></a>
 						</ul>
 					</div>
 					<div class="_catalogbread_list_bun">
 						<ul>
-							<a href="catalogbun.html"><li>Булочки</li></a>
-							<a href="catalogbunpage.html"><li>Булочка «Творожная»</li></a>
+							<a href="/dzhuzhba/catalogbun.html"><li>Булочки</li></a>
+							<a href="/dzhuzhba/catalogbunpage.html"><li>Булочка «Творожная»</li></a>
 							<a href="#"><li>Булочка «Особая»</li></a>
 							<a href="#"><li>Кекс с изюмом</li></a>
 							<a href="#"><li>Кекс с изюмом</li></a>
@@ -152,7 +152,7 @@
 					
 				</ul>
 				<ul>
-					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="/dzhuzhba/spec.html">Спецпредложения</a></li>
 					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
