--- a/dzhuzhba/catalogcakepage.html
+++ b/dzhuzhba/catalogcakepage.html
@@ -55,12 +55,12 @@
 						<div class="_header_main_menu _catalogmenu">
 							<nav>
 								<ul>
-									<li><a href="index.html">Главная</a></li>
-									<li><a href="company.html">О компании</a></li>
-									<li><a href="news.html">Новости</a></li>
-									<li><a href="catalog.html">Каталог</a></li>
-									<li><a href="price/allprice.txt" download>Прайс-лист</a></li>
-									<li><a href="contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -79,9 +79,9 @@
 	<section class="_breadcrumbs" style="background-color: #fff8ec;">
 		<div class="container">
 			<ul class="ul _breadcrumbs-catalog">
-				<li><a href="catalog.html">Каталог</a></li>
-				<li><a href="catalogcake.html">Торты, пирожные</a></li>
-				<li><a href="catalogcakepage.html">Торт «Панчо»</a></li>
+				<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+				<li><a href="/dzhuzhba/catalogcake.html">Торты, пирожные</a></li>
+				<li><a href="/dzhuzhba/catalogcakepage.html">Торт «Панчо»</a></li>
 			</ul>
 			<img src="img/cakes/header.png" alt="">
 		</div>
@@ -92,24 +92,24 @@
 				<div class="col-md-3 _catalog_menu_list">
 					<div class="_catalogcake_list_breads">
 						<ul>
-							<a href="catalogbread.html"><li >Хлеба</li></a>
-							<a href="catalogbreadpage.html"><li>Хлеб «Бородинский»</li></a>
+							<a href="/dzhuzhba/catalogbread.html"><li >Хлеба</li></a>
+							<a href="/dzhuzhba/catalogbreadpage.html"><li>Хлеб «Бородинский»</li></a>
 							<a href="#"><li>Хлеб «Столичный»</li></a>
 							<a href="#"><li>Хлеб «Особый»</li></a>
 						</ul>
 					</div>
 					<div class="_catalogcake_list_cakes">
 						<ul>
-							<a href="catalogcake.html"><li class="_catalog_menu_active">Торты, пирожные</li></a>
-							<a href="catalogcakepage.html"><li class="_catalog_page_active">Торт «Панчо»</li></a>
+							<a href="/dzhuzhba/catalogcake.html"><li class="_catalog_menu_active">Торты, пирожные</li></a>
+							<a href="/dzhuzhba/catalogcakepage.html"><li class="_catalog_page_active">Торт «Панчо»</li></a>
 							<a href="#"><li>Торт «Картошка»</li></a>
 							<a href="#"><li>Торт «Горка»</li></a>
 						</ul>
 					</div>
 					<div class="_catalogcake_list_bun">
 						<ul>
-							<a href="catalogbun.html"><li>Булочки</li></a>
-							<a href="catalogbunpage.html"><li>Булочка «Творожная»</li></a>
+							<a href="/dzhuzhba/catalogbun.html"><li>Булочки</li></a>
+							<a href="/dzhuzhba/catalogbunpage.html"><li>Булочка «Творожная»</li></a>
 							<a href="#"><li>Булочка «Особая»</li></a>
 							<a href="#"><li>Кекс с изюмом</li></a>
 							<a href="#"><li>Кекс с изюмом</li></a>
@@ -148,7 +148,7 @@
 					
 				</ul>
 				<ul>
-					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="/dzhuzhba/spec.html">Спецпредложения</a></li>
 					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
