--- a/dzhuzhba/company.html
+++ b/dzhuzhba/company.html
@@ -55,12 +55,12 @@
 						<div class="_header_main_menu">
 							<nav>
 								<ul>
-									<li><a href="index.html">Главная</a></li>
-									<li><a href="company.html">О компании</a></li>
-									<li><a href="news.html">Новости</a></li>
-									<li><a href="catalog.html">Каталог</a></li>
-									<li><a href="price/allprice.txt" download>Прайс-лист</a></li>
-									<li><a href="contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -198,7 +198,7 @@
 					
 				</ul>
 				<ul>
-					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="/dzhuzhba/spec.html">Спецпредложения</a></li>
 					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
