--- a/dzhuzhba/news.html
+++ b/dzhuzhba/news.html
@@ -55,12 +55,12 @@
 						<div class="_header_main_menu _newsmenu">
 							<nav>
 								<ul>
-									<li><a href="index.html">Главная</a></li>
-									<li><a href="company.html">О компании</a></li>
-									<li><a href="news.html">Новости</a></li>
-									<li><a href="catalog.html">Каталог</a></li>
-									<li><a href="price/allprice.txt" download>Прайс-лист</a></li>
-									<li><a href="contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -88,9 +88,9 @@
 			</div>
 			<h4>Все самое лучшее здесь</h4>
 			<div class="row _news_allbest">
-				<div class="col-md-4 col-sm-4 _news_allbest_block"><a href="catalogbread.html"><img src="img/categories/bread.png" alt=""><span href="#">Хлеб</span></a></div>
-				<div class="col-md-4 col-sm-4 _news_allbest_block"><a href="catalogcake.html"><img src="img/categories/cakes.png" alt=""><span href="#">Торты, пирожные</span></a></div>
-				<div class="col-md-4 col-sm-4 _news_allbest_block"><a href="catalogbun.html"><img src="img/categories/cooperation.png" alt=""><span href="#">Булочки</span></a></div>
+				<div class="col-md-4 col-sm-4 _news_allbest_block"><a href="/dzhuzhba/catalogbread.html"><img src="img/categories/bread.png" alt=""><span href="#">Хлеб</span></a></div>
+				<div class="col-md-4 col-sm-4 _news_allbest_block"><a href="/dzhuzhba/catalogcake.html"><img src="img/categories/cakes.png" alt=""><span href="#">Торты, пирожные</span></a></div>
+				<div class="col-md-4 col-sm-4 _news_allbest_block"><a href="/dzhuzhba/catalogbun.html"><img src="img/categories/cooperation.png" alt=""><span href="#">Булочки</span></a></div>
 			</div>
 		</div>
 	</section>
@@ -108,7 +108,7 @@
 					
 				</ul>
 				<ul>
-					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="/dzhuzhba/spec.html">Спецпредложения</a></li>
 					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
